use minpac instead of vim-jetpack

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "gitignore"]
 	path = gitignore
 	url = https://github.com/github/gitignore.git
-[submodule "vim-jetpack"]
-	path = vim-jetpack
-	url = https://github.com/tani/vim-jetpack.git
+[submodule "minpac"]
+	path = minpac
+	url = https://github.com/k-takata/minpac.git
