--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -18,7 +18,7 @@
     // "font",
     // "cursor",
     "terminal",
-    "terminalfont",
+    // "terminalfont",
     "cpu",
     "cpuusage",
     "gpu",
